--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -15,3 +15,4 @@ Exercises | Name | Solution (Python)
 \@ref(exr:it003010) |Calculation of the optimal temperature| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_014raMaxExothemica.ipynb)
 \@ref(exr:it003011) |Reversible exothermic reaction| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_016CSTROptimization.ipynb)
 \@ref(exr:it003012) |Non-isothermal reactors with interstage cooling| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_018CSTRLecho.ipynb)
+\@ref(exr:it003013) |Heat requirement for a Batch reactor| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_019BatchReactorHX.ipynb)
