Add illustration BR dynamics

--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -16,3 +16,4 @@ Exercises | Name | Solution (Python)
 \@ref(exr:it003011) |Reversible exothermic reaction| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_016CSTROptimization.ipynb)
 \@ref(exr:it003012) |Non-isothermal reactors with interstage cooling| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_018CSTRLecho.ipynb)
 \@ref(exr:it003013) |Heat requirement for a Batch reactor| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_019BatchReactorHX.ipynb)
+\@ref(exr:it003014) |Dynamic simulation of a non-isothermal batch reactor| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_020BatchReactorDyn.ipynb)
