--- a/02-mod02.Rmd
+++ b/02-mod02.Rmd
@@ -2483,6 +2483,75 @@ However, it is essential to include an economic function to optimize the operati
 
 The solution for this problem is avalaible in [Python](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_019BatchReactorHX.ipynb)
 
+```{exercise, it003014, name="Dynamic simulation of a non-isothermal batch reactor"}
+The chemical reaction is a liquid-phase, irreversible, exothermic, and first-order, which is taking place 
+into a BR.
+ 
+Let us assume that $A$ is fed to the reactor at 294 K, the diameter of the reactor is 2 m, and it is equipped with a jacket heat transfer and an additional external heat exchanger, which heat transfer area is four times the jacket area. The operating temperature is 340 K, and initially, the reactor is heated with a hot fluid until the reaction begins to generate heat, and then it is cooled by a cold fluid. 
+
+A split-range-heating/cooling system is used to heat or cool the reactor as it is required. A reactor temperature controller's setpoint is ramped up from 300 K to 340 K in 45 min. The hot-stream temperature is 373 K while the cold-stream one is 294 K. The maximum flow rate of each stream is one kg/s.
+
+The process has two operating restrictions: 
+
+1. It is required the maximum conversion of $A$ is equal to 99.99% and, 
+2. the reaction stops if the batch temperature is equal or greater than 400 K.
+
+```
+
+_Solution_.
+This problem is described by following ODEs
+\begin{gather*}
+\frac{dC_A}{dt} = - k \,C_A \\
+\frac{dT}{dt} = \frac{1}{\rho\,C_P\,V_R}\left(Q - \Delta H_R(T) \,k \,C_A \,V_R\right)\\
+\frac{dT_J}{dt} = \frac{F_\text{cold}\,T_\text{cold} + F_\text{hot}\,T_\text{hot}}{V_J} - 
+\frac{\left(F_\text{hot}+F_\text{cold}\right)T_J}{V_J} - \frac{Q}{V_J\rho_J\,C_{P_J}}
+\end{gather*}
+where $J$ refers to jacket heat exchanger
+
+with:
+\begin{equation*}
+	Q = U\,A\,\left(T_J - T \right) \qquad
+	k = k_0 \exp\left(\frac{-E}{R\,T}\right)
+\end{equation*}
+
+This problem was solved in [Python](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_020BatchReactorDyn.ipynb), and its results are shown in Figure \@ref(fig:fig003004).
+
+```{r fig003004, fig.align='center', fig.cap='Dynamic simulation of a batch reactor', echo=FALSE, fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/003_03_01.png")
+grid.raster(img)
+```
+
+Figure \@ref(fig:fig003004) (a) shows the reactor temperature profile compared to setpoint temperature (340 K). This figure is consistent with the regular mode operation of a BR depicted for high exothermic reactions.
+ 
+In (b), the behavior of the hot fluid and cold fluid rate is observed. 
+The maximum flow rate of the cold stream occurs at the end of the ramp when the temperature ($T_{R,\text{max}}$) exceeded 340 K (approx. 350K).
+Now, the reaction slows down, and when $T$ starts to drop, the cooling flow rate is gradually reduced to maintain $T$ at the desired level.
+
+In general, at $T_{R,\text{max}}$ for the reaction
+\begin{equation*}
+U\,A\left(T_{R,\text{max}}-T_\text{cold}\right) = \Delta H_R(T) V_R\,r_A(T_{R,\text{max}})
+\end{equation*}
+
+For a batch reactor is crucial that the cooling system could maintain $T_{R,\text{max}}$ and that the sensibility of $T_{R,\text{max}}$ towards the cooling medium inlet temperatura $T_\text{cold}$, $dT_{R,\text{max}}/dT_{\text{cold}}$ should be lower than 1 in order to have a dampening effect.
+
+In (c) is shown that at $T_{R,\text{max}}$ the concentration of _A_ dropped to about half its initial value. The final conversion of _A_ was reached in **291.29 min**
+    
+The same problem was solved for two different diameters for the reactor to analyze the effect over reactor performance and stability of the reaction.
+The results obtained are shown in figure \@ref(fig:fig003005).
+
+```{r fig003005, fig.align='center', fig.cap='Effect of size reactor over dynamic behavior of a BR', echo=FALSE, fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/003_03_02.png")
+grid.raster(img)
+```
+
+Figure \@ref(fig:fig003005) shows when the reactor size is decreased, its response is unstable, with a 10K overshoot of the desired temperature, whereas when the diameter is increased to 3 m, the reactor runs away
+
+#### Batch Reactor at constant-volume
+
 **Work in Progress**
 
 
