--- a/02-mod02.Rmd
+++ b/02-mod02.Rmd
@@ -2602,10 +2602,85 @@ In a gas-phase reacting system, there are two cases: there is no change in moles
 
 In the second case, there is a change in moles on reaction. Thus $\sum \nu_j = \Delta N$ and $\sum \Delta V_j \neq 0$.
 
-The use of a jacket surrounding the reactor is probably the most common method providing heat transfer because it is relatively inexpensive in terms of equipment cost. However, the most effective configuration of the heat exchange equipment will be determined by the amount of heat that must be added or removed from the reactor to keep optimum conversion of the key reactant into the desired product.
+The use of a jacket surrounding the reactor is probably the most common method providing heat transfer because it is relatively inexpensive in terms of equipment cost. However, the most effective heat exchange equipment configuration will be determined by the amount of heat that must be added or removed from the reactor to keep optimum conversion of the key reactant into the desired product.
 
 ### The Semi-Batch Reactor
 
+When addition of reactants, together with removal of liquid and vapor, is also considered, the equations becomes for example [@froment2011]:
+
+Continuity equations for specie _j_:
+\begin{equation*}
+\frac{C_j\,V}{dt} = F_1 C_{j,0} - F_2 C_j - F_{3,v}\,C_{j,v} - V \sum_{i=1}^R \nu_{ij}\, r_i
+\end{equation*}
+
+$F_1$ is the liquid feed rate, and $F_2$ is the liquid withdrawal rate, and $F_3$ is the vapor withdrawal rate.
+
+Energy equation: 
+\begin{equation*}
+\rho\,c_P\,V\, \frac{dT}{dt} = F_1\,c_P\,\rho\, T_1 -  F_2 \, c_P\, \rho\, T -  F_{3,v} \sum C_{j,c} \, \Delta H_v + Q + V \sum_{i=1}^R r_i \left( - \Delta H_i \right)
+\end{equation*}
+
+Accounting for the change in volume:
+\begin{equation*}
+\frac{dV}{dt} = F_1 - F_2 - F_{3,l}
+\end{equation*}
+with
+\begin{equation*}
+F_{3,l} = F_{3,v}\, \frac{273}{273+T} \, P \, \frac{1}{22.4}\frac{1}{C_{t,l}}
+\end{equation*}
+where $T$  is in degrees Celsius and $C_{t,l}$ is the total liquid concentration.
+
+One may choose to operate a semi-batch reactor to control the reaction or heat release during the reaction by slowly adding one reactant in the feed stream or maximizing the selectivity to a specific product.
+
+In order to illustrate the last option, let us consider two elementary liquid-phase reactions simultaneously. One of them produces an undesired product $U$.
+\begin{align*}
+&A + B \xrightarrow[]{k_D} C \\
+&A + B \xrightarrow[]{k_U} U
+\end{align*}
+whose rate equations are:
+\begin{align*}
+  r_D &= k_D\,C_A^2\,C_B \\
+  r_U &= k_U\,C_A\,C_B^2
+\end{align*}
+
+The instantaneous selectivity, $S_{D/U}$, is
+\begin{equation*}
+  S_{D/U} = \frac{k_D}{k_U}\,\frac{C_A}{C_B}
+\end{equation*}
+From this expression, to increase the production of _D_, we need to keep the concentration of A high as possible or B low as feasible.
+            
+As shown in figure, let us consider that the specie _A_ is placed in the reactor initially and _B_ is added continuously while reaction is taking place. The molar balance for $A$
+\begin{equation*}
+  r_A\,V = \frac{d\,N_A}{dt} = \frac{d\,\left(C_A\,V\right)}{dt} = V\,\frac{d\,C_A}{dt} + C_A\,\frac{d\,V}{dt}
+\end{equation*}
+The molar balance over B is
+\begin{equation*}
+  F_{B0} + r_B\,V = \frac{d\,N_B}{dt} \equiv \upsilon_0\,C_{B0} +  r_B\,V = V\,\frac{d\,C_B}{dt} + C_B\,\frac{d\,V}{dt}
+\end{equation*}
+
+The reaction volume varies with time as follow,
+\begin{equation*}
+  \upsilon_0\,\rho_0 = \frac{d\left(\rho\,V\right)}{dt}
+\end{equation*}
+
+For a constant-density system, $\rho_0 = \rho$, and
+\begin{equation*}
+  \upsilon_0\ = \frac{d\,V}{dt}
+\end{equation*}
+with the initial condition $V=V_0$ at $t=0$, integrating for the case of constant $V_0$ yields
+\begin{equation*}
+  V = V_0 + \upsilon_0\,t
+\end{equation*}
+
+Substituting into molar balance of _A_ and _B_
+\begin{align*}
+  \frac{d\,C_A}{dt} &= r_A - \frac{\upsilon_0}{V}\,C_A \\
+  \frac{d\,C_B}{dt} &= r_B - \frac{\upsilon_0\,\left(C_{B0} - C_B\right)}{V}
+\end{align*}
+
+We need to solve this EDOs system in order to measure the performance of the reactor.
+
+### Optimal Operation Policies
 **Work in Progress**
 
 
